--- a/keymap_img/temper.yaml
+++ b/keymap_img/temper.yaml
@@ -9,8 +9,17 @@ layers:
     - L
     - U
     - Y
-    - {t: '''', s: '"'}
-  - [A, R, S, T, G, M, N, E, I, O]
+    - {t: ;, s: ':'}
+  - - {t: A, h: ⌃}
+    - {t: R, h: ⎇}
+    - {t: S, h: ⌘}
+    - {t: T, h: ⇧}
+    - G
+    - M
+    - {t: N, h: ⇧}
+    - {t: E, h: ⌘}
+    - {t: I, h: ⎇}
+    - {t: O, h: LCTL}
   - - Z
     - X
     - C
@@ -18,27 +27,27 @@ layers:
     - V
     - K
     - H
-    - {t: ',', s: ;}
-    - {t: ., s: ':'}
-    - {t: '?', s: '!'}
-  - - ⌘
-    - num
-    - {t: ⇧, s: ⇪}
-    - SPACE
-    - nav
-    - {t: BACKSPACE, s: Alt+ BACKSPACE}
+    - {t: ',', s: <}
+    - {t: ., s: '>'}
+    - {t: /, s: '?'}
+  - - {t: ESC, h: ⌘}
+    - {t: SPACE, h: sym}
+    - {t: ↹, h: num}
+    - {t: ENTER, h: fun}
+    - {t: BSPC, h: nav}
+    - {t: DEL, h: mouse}
   qwerty:
   - [Q, W, E, R, T, Y, U, I, O, P]
-  - - A
-    - S
-    - D
-    - F
+  - - {t: A, h: ⌃}
+    - {t: S, h: ⎇}
+    - {t: D, h: ⌘}
+    - {t: F, h: ⇧}
     - G
     - H
-    - J
-    - K
-    - L
-    - {t: ;, s: ':'}
+    - {t: J, h: ⇧}
+    - {t: K, h: ⌘}
+    - {t: L, h: ⎇}
+    - {t: '''', h: LCTL, s: '"'}
   - - Z
     - X
     - C
@@ -48,42 +57,164 @@ layers:
     - M
     - {t: ',', s: <}
     - {t: ., s: '>'}
-    - /
-  - - {t: ▽, type: trans}
-    - {t: ▽, type: trans}
-    - {t: ▽, type: trans}
-    - {t: ▽, type: trans}
-    - {t: ▽, type: trans}
-    - {t: ▽, type: trans}
-  num:
-  - - '~'
-    - '@'
-    - '{'
-    - '}'
-    - '%'
+    - {t: /, s: '?'}
+  - - {t: ESC, h: ⌘}
+    - {t: SPACE, h: sym}
+    - {t: ↹, h: num}
+    - {t: ENTER, h: fun}
+    - {t: BSPC, h: nav}
+    - {t: DEL, h: mouse}
+  default_win:
+  - - Q
+    - W
+    - F
+    - P
+    - B
+    - J
+    - L
+    - U
+    - Y
+    - {t: '''', s: '"'}
+  - - {t: A, h: ⌘}
+    - {t: R, h: ⎇}
+    - {t: S, h: LCTL}
+    - {t: T, h: ⇧}
+    - G
+    - M
+    - {t: N, h: ⇧}
+    - {t: E, h: LCTL}
+    - {t: I, h: ⎇}
+    - {t: O, h: ⌘}
+  - - Z
+    - X
+    - C
+    - D
+    - V
+    - K
+    - H
+    - {t: ',', s: <}
+    - {t: ., s: '>'}
+    - {t: /, s: '?'}
+  - - {t: ESC, h: LCTL}
+    - {t: SPACE, h: sym}
+    - {t: ↹, h: num}
+    - {t: ENTER, h: fun}
+    - {t: BSPC, h: nav}
+    - {t: DEL, h: mouse}
+  qwerty_win:
+  - [Q, W, E, R, T, Y, U, I, O, P]
+  - - {t: A, h: ⌘}
+    - {t: S, h: ⎇}
+    - {t: D, h: LCTL}
+    - {t: F, h: ⇧}
+    - G
+    - H
+    - {t: J, h: ⇧}
+    - {t: K, h: LCTL}
+    - {t: L, h: ⎇}
+    - {t: '''', h: ⌘, s: '"'}
+  - - Z
+    - X
+    - C
+    - V
+    - B
+    - N
+    - M
+    - {t: ',', s: <}
+    - {t: ., s: '>'}
+    - {t: /, s: '?'}
+  - - {t: ESC, h: LCTL}
+    - {t: SPACE, h: sym}
+    - {t: ↹, h: num}
+    - {t: ENTER, h: fun}
+    - {t: BSPC, h: nav}
+    - {t: DEL, h: mouse}
+  sym:
+  - ['!', '@', '#', $, '%', ^, '&', '*', (, )]
+  - - {t: '`', s: '~'}
     - '*'
-    - '7'
-    - '8'
-    - '9'
-    - {t: '-', s: _}
-  - [^, '#', (, ), $, _, '4', '5', '6', +]
-  - - {t: '&', s: '|'}
-    - <
+    - +
+    - {t: '=', s: +}
+    - \
+    - '|'
+    - (
+    - '{'
     - {t: '[', s: '{'}
+    - <
+  - - '~'
+    - {t: /, s: '?'}
+    - {t: '-', s: _}
+    - _
+    - '!'
+    - '&'
+    - )
+    - '}'
     - {t: ']', s: '}'}
     - '>'
-    - {t: /, s: \}
-    - '1'
-    - '2'
-    - '3'
-    - {t: '=', s: +}
   - - {t: ▽, type: trans}
     - {type: held}
     - {t: ▽, type: trans}
+    - '"'
+    - {t: ▽, type: trans}
+    - ''''
+  num:
+  - - {t: ▽, type: trans}
+    - {t: ▽, type: trans}
+    - {t: ▽, type: trans}
+    - ⇪
+    - {t: ▽, type: trans}
+    - {t: ▽, type: trans}
+    - '7'
+    - '8'
+    - '9'
+    - {t: '=', s: +}
+  - - ⌃
+    - ⎇
+    - ⌘
+    - ⇧
+    - {t: ▽, type: trans}
+    - {t: /, s: '?'}
+    - '4'
+    - '5'
+    - '6'
+    - {t: '-', s: _}
+  - - {t: ▽, type: trans}
+    - {t: ▽, type: trans}
+    - {t: ▽, type: trans}
+    - {t: ▽, type: trans}
+    - {t: ▽, type: trans}
+    - '*'
+    - '1'
+    - '2'
+    - '3'
+    - +
+  - - {t: ▽, type: trans}
+    - {t: ▽, type: trans}
+    - {type: held}
     - '0'
-    - {t: ▽, type: trans}
-    - {t: ▽, type: trans}
+    - {t: ., s: '>'}
+    - BSPC
   nav:
+  - - {t: ▽, type: trans}
+    - {t: ▽, type: trans}
+    - {t: ▽, type: trans}
+    - ⇪
+    - {t: ▽, type: trans}
+    - {t: ▽, type: trans}
+    - ↞
+    - ↑
+    - ↠
+    - PG UP
+  - - ⌃
+    - ⎇
+    - ⌘
+    - ⇧
+    - {t: ▽, type: trans}
+    - {t: ▽, type: trans}
+    - ←
+    - ↓
+    - →
+    - PG DN
   - - {t: ▽, type: trans}
     - {t: ▽, type: trans}
     - {t: ▽, type: trans}
@@ -91,28 +222,8 @@ layers:
     - {t: ▽, type: trans}
     - {t: ▽, type: trans}
     - HOME
+    - {t: ▽, type: trans}
     - END
-    - ↹
-    - {t: BACKSPACE, s: Alt+ BACKSPACE}
-  - - {t: ⇧, h: sticky}
-    - {t: ⌃, h: sticky}
-    - {t: ⎇, h: sticky}
-    - {t: ⌘, h: sticky}
-    - ↹
-    - ←
-    - ↓
-    - ↑
-    - →
-    - {t: ESC, s: '`'}
-  - - {t: ▽, type: trans}
-    - DEL
-    - {t: ▽, type: trans}
-    - {t: ▽, type: trans}
-    - {t: ▽, type: trans}
-    - {t: ▽, type: trans}
-    - RET
-    - {t: ▽, type: trans}
-    - {t: ▽, type: trans}
     - {t: ▽, type: trans}
   - - {t: ▽, type: trans}
     - {t: ▽, type: trans}
@@ -121,36 +232,110 @@ layers:
     - {type: held}
     - {t: ▽, type: trans}
   fun:
-  - - {t: qwerty, h: toggle}
-    - MUTE
-    - VOL DN
-    - VOL UP
-    - OUT TOG
-    - {t: ▽, type: trans}
-    - F7
+  - - F7
     - F8
     - F9
     - F12
+    - {t: ▽, type: trans}
+    - {t: ▽, type: trans}
+    - ⇪
+    - {t: ▽, type: trans}
+    - {t: ▽, type: trans}
+    - {t: ▽, type: trans}
+  - - F4
+    - F5
+    - F6
+    - F11
+    - {t: ▽, type: trans}
+    - {t: ▽, type: trans}
+    - ⇧
+    - ⌘
+    - ⎇
+    - ⌃
+  - - F1
+    - F2
+    - F3
+    - F10
+    - {t: ▽, type: trans}
+    - {t: ▽, type: trans}
+    - {t: ▽, type: trans}
+    - {t: ▽, type: trans}
+    - {t: ▽, type: trans}
+    - {t: ▽, type: trans}
+  - - {t: ▽, type: trans}
+    - {t: ▽, type: trans}
+    - {t: ▽, type: trans}
+    - {type: held}
+    - {t: ▽, type: trans}
+    - {t: ▽, type: trans}
+  mouse:
+  - - {t: ▽, type: trans}
+    - {t: ▽, type: trans}
+    - {t: ▽, type: trans}
+    - {t: ▽, type: trans}
+    - {t: ▽, type: trans}
+    - {t: ▽, type: trans}
+    - {t: ▽, type: trans}
+    - {t: ▽, type: trans}
+    - {t: ▽, type: trans}
+    - {t: ▽, type: trans}
+  - - {t: ▽, type: trans}
+    - {t: ▽, type: trans}
+    - {t: ▽, type: trans}
+    - {t: ▽, type: trans}
+    - {t: ▽, type: trans}
+    - {t: ▽, type: trans}
+    - {t: ▽, type: trans}
+    - {t: ▽, type: trans}
+    - {t: ▽, type: trans}
+    - {t: ▽, type: trans}
+  - - {t: ▽, type: trans}
+    - {t: ▽, type: trans}
+    - {t: ▽, type: trans}
+    - {t: ▽, type: trans}
+    - {t: ▽, type: trans}
+    - {t: ▽, type: trans}
+    - {t: ▽, type: trans}
+    - {t: ▽, type: trans}
+    - {t: ▽, type: trans}
+    - {t: ▽, type: trans}
+  - - {t: ▽, type: trans}
+    - {t: ▽, type: trans}
+    - {t: ▽, type: trans}
+    - {t: ▽, type: trans}
+    - {t: ▽, type: trans}
+    - {type: held}
+  sys:
+  - - {t: default, h: toggle}
+    - {t: qwerty, h: toggle}
+    - {t: default_win, h: toggle}
+    - {t: qwerty_win, h: toggle}
+    - {t: ▽, type: trans}
+    - {t: ▽, type: trans}
+    - MUTE
+    - VOL DN
+    - VOL UP
+    - CAPSLOCK
   - - {t: BT, h: '0'}
     - {t: BT, h: '1'}
     - {t: BT, h: '2'}
     - {t: BT, h: '3'}
     - {t: BT, h: '4'}
     - {t: ▽, type: trans}
-    - F4
-    - F5
-    - F6
-    - F11
-  - - BT CLR
-    - PREV
     - PP
+    - PREV
     - NEXT
+    - ⇪
+  - - BT CLR
     - {t: ▽, type: trans}
     - {t: ▽, type: trans}
-    - F1
-    - F2
-    - F3
-    - F10
+    - {t: ▽, type: trans}
+    - OUT TOG
+    - {t: ▽, type: trans}
+    - {t: ▽, type: trans}
+    - {t: ▽, type: trans}
+    - {t: ▽, type: trans}
+    - {t: ▽, type: trans}
   - - {t: ▽, type: trans}
     - {type: held}
     - {t: ▽, type: trans}
