--- a/boards/shields/temper/temper.zmk.yml
+++ b/boards/shields/temper/temper.zmk.yml
@@ -3,11 +3,13 @@ id: temper
 name: Chocofi Temper
 type: shield
 url: https://github.com/raeedcho/chocofi-temper
-requires: 
-  - pro_micro
-# exposes:
+requires: [pro_micro]
+exposes: [i2c_oled]
 features:
   - keys
+  - display
+  - underglow
+  - studio
 siblings:
   - temper_left
   - temper_right
