--- a/keymap_img/temper.yaml
+++ b/keymap_img/temper.yaml
@@ -9,17 +9,8 @@ layers:
     - L
     - U
     - Y
-    - {t: ;, s: ':'}
-  - - {t: A, h: ⌃}
-    - {t: R, h: ⎇}
-    - {t: S, h: ⌘}
-    - {t: T, h: ⇧}
-    - G
-    - M
-    - {t: N, h: ⇧}
-    - {t: E, h: ⌘}
-    - {t: I, h: ⎇}
-    - {t: O, h: LCTL}
+    - {t: '''', s: '"'}
+  - [A, R, S, T, G, M, N, E, I, O]
   - - Z
     - X
     - C
@@ -27,92 +18,27 @@ layers:
     - V
     - K
     - H
-    - {t: ',', s: <}
-    - {t: ., s: '>'}
-    - {t: /, s: '?'}
-  - - {t: ESC, h: ⌘}
-    - {t: SPACE, h: sym}
-    - {t: ↹, h: num}
-    - {t: ENTER, h: fun}
-    - {t: BSPC, h: nav}
-    - {t: DEL, h: mouse}
+    - {t: ',', s: ;}
+    - {t: ., s: ':'}
+    - {t: '?', s: '!'}
+  - - ⌘
+    - num
+    - {t: ⇧, s: ⇪}
+    - SPACE
+    - nav
+    - {t: BACKSPACE, s: Alt+ BACKSPACE}
   qwerty:
   - [Q, W, E, R, T, Y, U, I, O, P]
-  - - {t: A, h: ⌃}
-    - {t: S, h: ⎇}
-    - {t: D, h: ⌘}
-    - {t: F, h: ⇧}
-    - G
-    - H
-    - {t: J, h: ⇧}
-    - {t: K, h: ⌘}
-    - {t: L, h: ⎇}
-    - {t: '''', h: LCTL, s: '"'}
-  - - Z
-    - X
-    - C
-    - V
-    - B
-    - N
-    - M
-    - {t: ',', s: <}
-    - {t: ., s: '>'}
-    - {t: /, s: '?'}
-  - - {t: ESC, h: ⌘}
-    - {t: SPACE, h: sym}
-    - {t: ↹, h: num}
-    - {t: ENTER, h: fun}
-    - {t: BSPC, h: nav}
-    - {t: DEL, h: mouse}
-  default_win:
-  - - Q
-    - W
-    - F
-    - P
-    - B
-    - J
-    - L
-    - U
-    - Y
-    - {t: '''', s: '"'}
-  - - {t: A, h: ⌘}
-    - {t: R, h: ⎇}
-    - {t: S, h: LCTL}
-    - {t: T, h: ⇧}
-    - G
-    - M
-    - {t: N, h: ⇧}
-    - {t: E, h: LCTL}
-    - {t: I, h: ⎇}
-    - {t: O, h: ⌘}
-  - - Z
-    - X
-    - C
+  - - A
+    - S
     - D
-    - V
-    - K
-    - H
-    - {t: ',', s: <}
-    - {t: ., s: '>'}
-    - {t: /, s: '?'}
-  - - {t: ESC, h: LCTL}
-    - {t: SPACE, h: sym}
-    - {t: ↹, h: num}
-    - {t: ENTER, h: fun}
-    - {t: BSPC, h: nav}
-    - {t: DEL, h: mouse}
-  qwerty_win:
-  - [Q, W, E, R, T, Y, U, I, O, P]
-  - - {t: A, h: ⌘}
-    - {t: S, h: ⎇}
-    - {t: D, h: LCTL}
-    - {t: F, h: ⇧}
+    - F
     - G
     - H
-    - {t: J, h: ⇧}
-    - {t: K, h: LCTL}
-    - {t: L, h: ⎇}
-    - {t: '''', h: ⌘, s: '"'}
+    - J
+    - K
+    - L
+    - {t: ;, s: ':'}
   - - Z
     - X
     - C
@@ -122,99 +48,42 @@ layers:
     - M
     - {t: ',', s: <}
     - {t: ., s: '>'}
-    - {t: /, s: '?'}
-  - - {t: ESC, h: LCTL}
-    - {t: SPACE, h: sym}
-    - {t: ↹, h: num}
-    - {t: ENTER, h: fun}
-    - {t: BSPC, h: nav}
-    - {t: DEL, h: mouse}
-  sym:
-  - ['!', '@', '#', $, '%', ^, '&', '*', (, )]
-  - - {t: '`', s: '~'}
-    - '*'
-    - +
-    - {t: '=', s: +}
-    - \
-    - '|'
-    - (
-    - '{'
-    - {t: '[', s: '{'}
-    - <
-  - - '~'
-    - {t: /, s: '?'}
-    - {t: '-', s: _}
-    - _
-    - '!'
-    - '&'
-    - )
-    - '}'
-    - {t: ']', s: '}'}
-    - '>'
+    - /
   - - {t: ▽, type: trans}
-    - {type: held}
     - {t: ▽, type: trans}
-    - '"'
     - {t: ▽, type: trans}
-    - ''''
+    - {t: ▽, type: trans}
+    - {t: ▽, type: trans}
+    - {t: ▽, type: trans}
   num:
-  - - {t: ▽, type: trans}
-    - {t: ▽, type: trans}
-    - {t: ▽, type: trans}
-    - ⇪
-    - {t: ▽, type: trans}
-    - {t: ▽, type: trans}
+  - - '~'
+    - '@'
+    - '{'
+    - '}'
+    - '%'
+    - '*'
     - '7'
     - '8'
     - '9'
-    - {t: '=', s: +}
-  - - ⌃
-    - ⎇
-    - ⌘
-    - ⇧
-    - {t: ▽, type: trans}
-    - {t: /, s: '?'}
-    - '4'
-    - '5'
-    - '6'
     - {t: '-', s: _}
-  - - {t: ▽, type: trans}
-    - {t: ▽, type: trans}
-    - {t: ▽, type: trans}
-    - {t: ▽, type: trans}
-    - {t: ▽, type: trans}
-    - '*'
+  - [^, '#', (, ), $, _, '4', '5', '6', +]
+  - - {t: '&', s: '|'}
+    - <
+    - {t: '[', s: '{'}
+    - {t: ']', s: '}'}
+    - '>'
+    - {t: /, s: \}
     - '1'
     - '2'
     - '3'
-    - +
+    - {t: '=', s: +}
   - - {t: ▽, type: trans}
-    - {t: ▽, type: trans}
     - {type: held}
+    - {t: ▽, type: trans}
     - '0'
-    - {t: ., s: '>'}
-    - BSPC
+    - {t: ▽, type: trans}
+    - {t: ▽, type: trans}
   nav:
-  - - {t: ▽, type: trans}
-    - {t: ▽, type: trans}
-    - {t: ▽, type: trans}
-    - ⇪
-    - {t: ▽, type: trans}
-    - {t: ▽, type: trans}
-    - ↞
-    - ↑
-    - ↠
-    - PG UP
-  - - ⌃
-    - ⎇
-    - ⌘
-    - ⇧
-    - {t: ▽, type: trans}
-    - {t: ▽, type: trans}
-    - ←
-    - ↓
-    - →
-    - PG DN
   - - {t: ▽, type: trans}
     - {t: ▽, type: trans}
     - {t: ▽, type: trans}
@@ -222,8 +91,28 @@ layers:
     - {t: ▽, type: trans}
     - {t: ▽, type: trans}
     - HOME
-    - {t: ▽, type: trans}
     - END
+    - ↹
+    - {t: BACKSPACE, s: Alt+ BACKSPACE}
+  - - {t: ⇧, h: sticky}
+    - {t: ⌃, h: sticky}
+    - {t: ⎇, h: sticky}
+    - {t: ⌘, h: sticky}
+    - ↹
+    - ←
+    - ↓
+    - ↑
+    - →
+    - {t: ESC, s: '`'}
+  - - {t: ▽, type: trans}
+    - DEL
+    - {t: ▽, type: trans}
+    - {t: ▽, type: trans}
+    - {t: ▽, type: trans}
+    - {t: ▽, type: trans}
+    - RET
+    - {t: ▽, type: trans}
+    - {t: ▽, type: trans}
     - {t: ▽, type: trans}
   - - {t: ▽, type: trans}
     - {t: ▽, type: trans}
@@ -232,110 +121,36 @@ layers:
     - {type: held}
     - {t: ▽, type: trans}
   fun:
-  - - F7
-    - F8
-    - F9
-    - F12
-    - {t: ▽, type: trans}
-    - {t: ▽, type: trans}
-    - ⇪
-    - {t: ▽, type: trans}
-    - {t: ▽, type: trans}
-    - {t: ▽, type: trans}
-  - - F4
-    - F5
-    - F6
-    - F11
-    - {t: ▽, type: trans}
-    - {t: ▽, type: trans}
-    - ⇧
-    - ⌘
-    - ⎇
-    - ⌃
-  - - F1
-    - F2
-    - F3
-    - F10
-    - {t: ▽, type: trans}
-    - {t: ▽, type: trans}
-    - {t: ▽, type: trans}
-    - {t: ▽, type: trans}
-    - {t: ▽, type: trans}
-    - {t: ▽, type: trans}
-  - - {t: ▽, type: trans}
-    - {t: ▽, type: trans}
-    - {t: ▽, type: trans}
-    - {type: held}
-    - {t: ▽, type: trans}
-    - {t: ▽, type: trans}
-  mouse:
-  - - {t: ▽, type: trans}
-    - {t: ▽, type: trans}
-    - {t: ▽, type: trans}
-    - {t: ▽, type: trans}
-    - {t: ▽, type: trans}
-    - {t: ▽, type: trans}
-    - {t: ▽, type: trans}
-    - {t: ▽, type: trans}
-    - {t: ▽, type: trans}
-    - {t: ▽, type: trans}
-  - - {t: ▽, type: trans}
-    - {t: ▽, type: trans}
-    - {t: ▽, type: trans}
-    - {t: ▽, type: trans}
-    - {t: ▽, type: trans}
-    - {t: ▽, type: trans}
-    - {t: ▽, type: trans}
-    - {t: ▽, type: trans}
-    - {t: ▽, type: trans}
-    - {t: ▽, type: trans}
-  - - {t: ▽, type: trans}
-    - {t: ▽, type: trans}
-    - {t: ▽, type: trans}
-    - {t: ▽, type: trans}
-    - {t: ▽, type: trans}
-    - {t: ▽, type: trans}
-    - {t: ▽, type: trans}
-    - {t: ▽, type: trans}
-    - {t: ▽, type: trans}
-    - {t: ▽, type: trans}
-  - - {t: ▽, type: trans}
-    - {t: ▽, type: trans}
-    - {t: ▽, type: trans}
-    - {t: ▽, type: trans}
-    - {t: ▽, type: trans}
-    - {type: held}
-  sys:
-  - - {t: default, h: toggle}
-    - {t: qwerty, h: toggle}
-    - {t: default_win, h: toggle}
-    - {t: qwerty_win, h: toggle}
-    - {t: ▽, type: trans}
-    - {t: ▽, type: trans}
+  - - {t: qwerty, h: toggle}
     - MUTE
     - VOL DN
     - VOL UP
-    - CAPSLOCK
+    - OUT TOG
+    - {t: ▽, type: trans}
+    - F7
+    - F8
+    - F9
+    - F12
   - - {t: BT, h: '0'}
     - {t: BT, h: '1'}
     - {t: BT, h: '2'}
     - {t: BT, h: '3'}
     - {t: BT, h: '4'}
     - {t: ▽, type: trans}
-    - PP
-    - PREV
-    - NEXT
-    - ⇪
+    - F4
+    - F5
+    - F6
+    - F11
   - - BT CLR
+    - PREV
+    - PP
+    - NEXT
     - {t: ▽, type: trans}
     - {t: ▽, type: trans}
-    - {t: ▽, type: trans}
-    - OUT TOG
-    - {t: ▽, type: trans}
-    - {t: ▽, type: trans}
-    - {t: ▽, type: trans}
-    - {t: ▽, type: trans}
-    - {t: ▽, type: trans}
+    - F1
+    - F2
+    - F3
+    - F10
   - - {t: ▽, type: trans}
     - {type: held}
     - {t: ▽, type: trans}
