--- a/build.yaml
+++ b/build.yaml
@@ -13,7 +13,7 @@
 #
 ---
 include:
-  - board: nice_nano
+  - board: nice_nano_v2
     shield: temper_left
-  - board: nice_nano
+  - board: nice_nano_v2
     shield: temper_right
