--- a/build.yaml
+++ b/build.yaml
@@ -14,6 +14,6 @@
 ---
 include:
   - board: nice_nano_v2
-    shield: temper_left
+    shield: tempe_left
   - board: nice_nano_v2
-    shield: temper_right
+    shield: tempe_right
